[gd_scene load_steps=4 format=3 uid="uid://bcjyag1lcgj2m"]

[ext_resource type="Script" uid="uid://box0148khngy" path="res://scripts/ui_scripts/scanner_hud_debug.gd" id="1_yu7vc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yu7vc"]
bg_color = Color(0.223103, 0.223103, 0.223103, 1)

[sub_resource type="Theme" id="Theme_p02uh"]
Label/styles/normal = SubResource("StyleBoxFlat_yu7vc")

[node name="ScannerHudDebug" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_p02uh")
script = ExtResource("1_yu7vc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TargetLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PromptLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ScanCountLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="StateLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
